fixed bloglist loadingskeleton not showing

--- a/src/styles/sections/_blogslist.scss
+++ b/src/styles/sections/_blogslist.scss
@@ -19,6 +19,11 @@
                 {
                     margin-right: 0.75rem;
                 }
+
+                &.create_new
+                {
+                    justify-content: center;
+                }
             }
 
             .blogs_list_item_button
